--- a/exercise_2.Rmd
+++ b/exercise_2.Rmd
@@ -11,9 +11,11 @@ library(tidyverse)
 library(janitor)
 ```
 
-## Problem 2a. Page 27 of textbook
+## Problem 2
 
-```{r data, echo=FALSE}
+### Part a
+
+```{r data}
 births <- tibble(prop_girls = 
                    c(.4777,
                      .4875,
@@ -26,52 +28,65 @@ births <- tibble(prop_girls =
                      .4895,
                      .4797,
                      .4876,
-                     .4859, .4857, .4907, .5010, .4903, .4860, .4911, .4871, .4725, .4822, .4870, .4823, .4973))
+                     .4859,
+                     .4857,
+                     .4907,
+                     .5010,
+                     .4903, 
+                     .4860,
+                     .4911, 
+                     .4871, 
+                     .4725,
+                     .4822,
+                     .4870,
+                     .4823,
+                     .4973))
 
 ```
 
 
-```{r 2a, echo=FALSE}
+```{r 2a}
 
 # calculating standard deviation
 
 sd_actual <- sd(births$prop_girls)
 
 # averaging the proportions above and dividing by the square root of the sample
-# size. So p bar divided by the square root of the number. Dividing by 24
-# because we have 24 data points so that is our sample size.
+# size. So p bar divided by the square root of the number. Dividing by 3900
+# because we have 3900 observations per month
 
 avg_birth <- mean(births$prop_girls)
 
 std_theoretical <- sqrt(avg_birth * (1 - avg_birth) / 3900)
 ```
 
-## Problem 2b
+
+The actual standard deviation in this data set is `r sd_actual`. The theoretical standard deviation of this data set is `r std_theoretical`. The actual standard deviation is less than the theoretical standard deviation, suggesting that the actual distribution could have a tighter distribution on average than the theoretical distribution if the sexes of the babies were independently decided with a constant probability. 
+
+### Part b
 
 ```{r 2a}
-# use the chi-squared test to do this with 23 df. Finding the upper and lower bound and seeing if the chi squared test above is within these bounds. 
+# use the chi-squared test to do this with 23 df. Finding the upper and lower
+# bound and seeing if the chi squared test above is within these bounds.
 
 # finding the chi sq test statistic 
 
 chisq <- ((23) * sd_actual^2) / std_theoretical^2
 
-# not really sure what the stuff below is for?
+# calculating the upper and lower bounds of the interval
 
 lower_bound <- qchisq(.05/2, df = 23)
 upper_bound <- qchisq(.975, df = 23)
 
-# calculating the p value 
-
-p_val <- 2*pchisq(chisq, df = 23)
 
 # calculating confidence interval
 
-upper_real <- sqrt(23*24^2 / lower_bound)
-lower_real <- sqrt(23*24^2 / upper_bound)
+upper_real <- sqrt(23*sd_actual^2 / lower_bound)
+lower_real <- sqrt(23*sd_actual^2 / upper_bound)
 
 ```
 
-The chi-squared statistic is *`r chisq`*. This value falls within the calculated lower and upper bounds of *`r lower_bound`, `r upper_bound`* and is thus not statistically significant. 
+The chi-squared test statistic is *`r chisq`*. At the 95% level with 23 degrees of freedom, this value falls within the calculated lower and upper bounds (*`r lower_bound`, `r upper_bound`*) and is thus not statistically significant. Additionally, the observed standard deviation (`r sd_actual`) is within the calculated range of (`r lower_real`, `r lower_real`). 
 
 
 ## Problem 3
@@ -97,16 +112,21 @@ for(i in 1:1000){
 
 # plotting a histogram
 
-# getting the mean of 
+# getting the mean of the vector
+
+avg_dist <- mean(sums)
 
 {
-hist(sums, main = "Distribution of 1000 Sims of Draws(0,1)",
-     probability = TRUE, las = 1)
+hist(sums, main = "Distribution of the sum of 20 independent Uniform(0,1)
+     random variables (1000 simulations)",
+     probability = TRUE, las = 1,
+     xlab = "Sum of Random Variables")
 curve(dnorm(x=x, mean = mean(sums), sd = sd(sums)),
       col = "steelblue2", lwd = 2, add  = TRUE, yaxt = "n")
 }
 
 ```
 
-write paragraph saying that it is not exactly the same, demonstrated in the mean not being exactly ten. Can be explained by the fact that this is just simulations, the world is not perfect. 
+In in a perfect world, the distribution above would be centered at x = ten and have the same shape as the normal curve. However, because the above distribution is just 1,000 simulations, it does not match the the shape of the normal curve exactly. More specifically, it is not perfectly centered. However, the mean is very close to 10 (`r avg_dist`), demonstrating the power of the central limit theorem. 
+
 
